<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/ActMainTextView.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_smaller"
            android:layout_marginTop="@dimen/spacing_smaller"
            android:text="@string/coordinats"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_smaller"
            android:layout_marginTop="@dimen/spacing_smaller"
            android:orientation="horizontal">

            <TextView
                style="@style/ActMainTextView.White"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/coordinate_x"/>

            <TextView
                style="@style/ActMainTextView.White"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/coordinate_y"/>

            <TextView
                style="@style/ActMainTextView.White"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/coordinate_z"/>

        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/act_main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:scrollbars="vertical"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/frg_acc_fab_graph"
        style="@style/AppFABTheme.Normal"
        android:layout_above="@+id/frg_acc_fab_start_pause"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_graph"
        app:backgroundTint="@color/colorGreenNormal"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/frg_acc_fab_start_pause"
        style="@style/AppFABTheme.Normal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_start"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/header"
        android:background="@drawable/shadow"
        android:visibility="visible"/>

</RelativeLayout>